Trying to fix simultaneous activities not end-aligned on mobile

--- a/_assets/stylesheets/_agenda.sass
+++ b/_assets/stylesheets/_agenda.sass
@@ -122,12 +122,12 @@
           color: #2180f9
       .agenda-double-activity
         width: 100%
+        display: flex
+        align-items: end
         .activity-left
           float: left
           margin-right: 1%
           width: 49%
-          @media screen and (max-width: 991px)
-            height: 100%
           .activity-time
             text-align: left
             color: #2180f9
